# api-automated-testing-python

./: .env.template  .gitignore  README.md  config.py  pyproject.toml  pytest.ini
src/api_automated_testing/api/: check_username_api.py  login_api.py  register_api.py
src/api_automated_testing/utils/: TokenManager.py  db_utils.py  get_auth_header.py
tests/data/: test_data.xlsx
tests/test_case/: test_login.py  test_uesr.py
